--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
         //Optional: see how to use the utility.
         compile 'com.ogaclejapan.smarttablayout:utils-v13:1.6.1@aar'
     }
+    compile 'com.github.jd-alexander:LikeButton:0.2.3'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
