--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
+        multiDexEnabled true  //TODO j'ai activer le multidex dans le projet il permet de prendre en compte plus que 64k methode dans le projet
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -45,6 +45,6 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile "com.android.support:multidex:1.0.1"
+    compile "com.android.support:multidex:1.0.1"  //TODO 64K methode
 
 }
