--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,26 +25,24 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
-    dependencies {
-    }
+    compile 'jp.wasabeef:glide-transformations:3.0.1'
+    // If you want to use the GPU Filters
+    compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
+    compile 'com.github.bumptech.glide:glide:4.3.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     compile 'com.github.jd-alexander:LikeButton:0.2.3'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'  //TODO supprime et change par GLIDE pour charger les images
-    compile 'com.android.support:appcompat-v7:24.2.1'
+     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'javax.annotation:javax.annotation-api:1.2'
-    compile 'com.makeramen:roundedimageview:2.2.1'   //TODO les round image sont dans le transformer de GLIDE
-    compile 'com.squareup.picasso:picasso:2.5.2'  //TODO replace with GLIDE
     compile 'net.danlew:android.joda:2.9.9'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile "com.android.support:multidex:1.0.1"  //TODO 64K methode
+    compile "com.android.support:multidex:1.0.1"  //TODO 64K methode //ok
 
 }
